Wrap up for inital 3.0.0 release